@@ -84,12 +84,9 @@ remove_tmpdir()
 trap remove_tmpdir EXIT
 
 # prepare test files
-SUBDIR=$RHASH_TMP/dir1
-mkdir $RHASH_TMP $SUBDIR || die "Unable to create tmp dir."
+mkdir $RHASH_TMP || die "Unable to create tmp dir."
+cp "$SCRIPT_DIR/test1K.data" $RHASH_TMP/test1K.data
 cd "$RHASH_TMP"
-cp "$SCRIPT_DIR/test1K.data" test1K.data
-FILE_A=dir1/a.txt
-printf "a" > $FILE_A
 
 # get the list of supported hash options
 HASHOPT="`$rhash --list-hashes|sed 's/ .*$//;/[^23]-/s/-\([0-9R]\)/\1/'|tr A-Z a-z`"
@@ -207,14 +204,13 @@ TEST_EXPECTED="(message) 1 E8B7BE43 5c334qy BTAXLOOA6G3KQMODTHRGS5ZGME hvfkN/qlp
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test %u modifier:           "
-cp $FILE_A "dir1/=@+.txt"
+mkdir dir1 && printf "a" > "dir1/=@+.txt"
 TEST_RESULT=$( $rhash -p '%uf %Uf %up %Up %uxc %uxC %ubc %ubC\n' "dir1/=@+.txt" )
 TEST_EXPECTED="%3d%40%2b.txt %3D%40%2B.txt dir1%2f%3d%40%2b.txt dir1%2F%3D%40%2B.txt e8b7be43 E8B7BE43 5c334qy 5C334QY"
 check "$TEST_RESULT" "$TEST_EXPECTED" .
 TEST_RESULT=$( $rhash -p '%uBc %UBc %Bc %u@c %U@c\n' -m "a" )
 TEST_EXPECTED="6Le%2bQw%3d%3d 6Le%2BQw%3D%3D 6Le+Qw== %e8%b7%beC %E8%B7%BEC"
 check "$TEST_RESULT" "$TEST_EXPECTED"
-rm -f "dir1/=@+.txt"
 
 new_test "test special characters:    "
 TEST_RESULT=$( $rhash -p '\63\1\277\x0f\x1\t\\ \x34\r' -m "" )
@@ -252,7 +248,9 @@ TEST_RESULT=$( $rhash --simple -a test1K.data | $rhash -vc - 2>/dev/null | grep 
 match "$TEST_RESULT" "^test1K.data *OK"
 
 new_test "test checking magnet link:  "
-TEST_RESULT=$( $rhash --magnet -a test1K.data | $rhash -vc - 2>&1 | grep test1K.data )
+# also test that '--check' verifies files in the current directory
+mkdir magnet_dir && $rhash --magnet -a test1K.data > magnet_dir/t.magnet
+TEST_RESULT=$( $rhash -vc magnet_dir/t.magnet 2>&1 | grep test1K.data )
 TEST_EXPECTED="^test1K.data *OK"
 match "$TEST_RESULT" "$TEST_EXPECTED"
 
@@ -283,6 +281,20 @@ TEST_RESULT=$( $rhash --simple --embed-crc --embed-crc-delimiter=_ 'test.data' 2
 check "$TEST_RESULT" "d3d99e8b  test_[D3D99E8B].data"
 rm 'test_[D3D99E8B].data' 'test_[D3D99E8C].data'
 
+new_test "test checking recursively:  "
+mkdir -p check/a && cp test1K.data check/a/b.data
+echo "a/b.data B70B4C26" > check/b.sfv
+TEST_RESULT=$( $rhash -Crc check/ | grep b.data )
+match "$TEST_RESULT" "^a/b.data *OK" .
+echo "B70B4C26" > check/a/b.data.crc32
+TEST_RESULT=$( $rhash --crc-accept=.crc32 -Crc check/a | grep "data.*OK" )
+match "$TEST_RESULT" "^check/a.b.data *OK" .
+# test that hash-files specified explicitly by command line are checked
+# in the current directory even with '--recursive' option
+echo "test1K.data B70B4C26" > check/t.sfv
+TEST_RESULT=$( $rhash -Crc check/t.sfv | grep "data.*OK" )
+match "$TEST_RESULT" "^test1K.data *OK"
+
 new_test "test wrong sums detection:  "
 $rhash -p '%c\n%m\n%e\n%h\n%g\n%t\n%a\n%w\n' -m WRONG > t.sum
 TEST_RESULT=$( $rhash -vc t.sum 2>&1 | grep 'OK' )
@@ -290,8 +302,7 @@ check "$TEST_RESULT" ""
 rm t.sum
 
 new_test "test *accept options:       "
-rm -rf test_dir/
-mkdir -p test_dir && touch test_dir/file.txt test_dir/file.bin
+mkdir test_dir && touch test_dir/file.txt test_dir/file.bin
 # correctly handle MIGW posix path conversion
 echo "$MSYSTEM" | grep -q '^MINGW[36][24]' && SLASH=// || SLASH="/"
 # test also --path-separator option
@@ -301,7 +312,6 @@ TEST_RESULT=$( $rhash -rC --simple --accept=.txt --path-separator=\\ test_dir )
 check "$TEST_RESULT" "00000000  test_dir\\file.txt" .
 TEST_RESULT=$( $rhash -rc --crc-accept=.bin test_dir 2>/dev/null | sed -n '/Verifying/s/-//gp' )
 match "$TEST_RESULT" "( Verifying test_dir.file\\.bin )"
-rm -rf test_dir/
 
 new_test "test ignoring of log files: "
 touch t1.out t2.out
